# py-priompt

./: .cursorrules  .gitignore  LICENSE.md  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/priompt/: __init__.py  components.py  lib.py  openai.py  output_catcher.py  preview.py  tokenizer.py  types.py
tests/: test_base.py  test_components.py  test_output_catcher.py  test_sourcemap.py
tests/__snapshots__/: test_components.ambr
